[package]
name = "leptos-demo"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z' # z: size (and speed)
lto = true
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr"] }
web-time = "1.1.0"
rust-i18n = "3"
leptos_meta = "0.7.8"
